--- a/src/app/authentications/sign-in/sign-in.component.css
+++ b/src/app/authentications/sign-in/sign-in.component.css
@@ -1,7 +1,21 @@
-.example-full-width {
+.example-form {
+    min-width: 150px;
+    max-width: 500px;
+    width: 100%;
+  }
+  
+  .example-full-width {
     width: 100%;
   }
   .login-row{
+    text-align: center;
+  }
+
+  mat-card-subtitle{
+    /* text-align: center; */
+  }
+
+  mat-card-title{
     text-align: center;
   }
 
@@ -47,11 +61,17 @@
   margin: -65px 0 0 -65px;
   width: 130px;
   height: 130px;
-  background-image: url("../assets/images/NUD_Logo.png"); 
+  background-image: url("../../../assets/images/NUD_Logo.png"); 
   background-size: cover;
   background-repeat: no-repeat;
 } 
 
 .div-load{
   display: none;
+}
+#errorMessage{
+  color: red;
+}
+#successMessage{
+  color: green;
 }
