--- a/src/app/top-bars/menu/menu.component.html
+++ b/src/app/top-bars/menu/menu.component.html
@@ -50,6 +50,12 @@
           </a>
         </div>
       </li>
+      <li *ngIf="isOnline.canActivate()" class="nav-item active">
+        <a class="nav-link" (click)="logout()" href="#">
+          <mat-icon>lock</mat-icon>
+          <b>ออกจากระบบ</b>
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
