--- a/src/app/students/dashboard-student/dashboard-student.component.html
+++ b/src/app/students/dashboard-student/dashboard-student.component.html
@@ -23,7 +23,7 @@
     <div class="col-md-3 column-dashboard">
       <img src="./assets/images/Wordpad-icon.png" />
       <br />
-      <!-- <button *ngIf="!received" mat-raised-button (click)="gotoInfo()" class="button-dashboard">1. แบบฟอร์มใบสมัคร</button> -->
+      <button *ngIf="!received" mat-raised-button (click)="gotoInfo()" class="button-dashboard">1. แบบฟอร์มใบสมัคร</button>
       <button *ngIf="received" mat-raised-button (click)="gotoRecived()" class="button-dashboard">1. แบบฟอร์มใบสมัคร</button>
       <p>
 
