--- a/src/app/students/infomations/infomations.component.html
+++ b/src/app/students/infomations/infomations.component.html
@@ -586,14 +586,14 @@
         เมื่อนักเรียนอัพโหลดรูปภาพ และกรอกข้อมูลครบถ้วนถูกต้องแล้วให้ดำเนินการดังต่อไปนี้
         <ol>
           <li>พิมพ์ใบสมัครจากระบบแล้วตรวจสอบข้อมูลอีกครั้งว่าข้อมูลเหล่านั้นมีความถูกต้องแล้วจึงลงลายมือชื่อที่ใบสมัคร</li>
-          <li>พิมพ์ใบแจ้งชำระเงินแล้วนำไปชำระที่สาขาธนาคารกรุงศรีอยุธยา จำกัด (มหาชน) หรือเค้าน์เตอร์เซอร์วิส ทุกสาขา แล้วสำเนาหลักฐานพร้อมรับรองสำเนา</li>
+          <li>พิมพ์ใบแจ้งชำระเงินแล้วนำไปชำระที่สาขาธนาคารกรุงศรีอยุธยา จำกัด (มหาชน) หรือเคาน์เตอร์เซอร์วิส ทุกสาขา แล้วสำเนาหลักฐานพร้อมรับรองสำเนา</li>
           <li>เตรียมหลักฐานการสำเร็จการศึกษาหรือใบรับรองที่แสดงว่าปัจจุบันกำลังศึกษาอยู่ระดับชั้นใด โดยจะใช้ฉบับจริงหรือสำเนาก็ได้
             หากใช้แบบสำเนาให้รับรองสำเนาด้วย
           </li>
           <li>เอกสารอื่นๆ เพิ่มเติมอาทิ สำเนาใบเปลี่ยนชื่อ หรือนามสกุล เป็นต้น</li>
           <li>
             รวบรวมเอกสารดังกล่าวตามข้อ 1 - 4 แล้วจัดส่งทางไปรษณีย์ หรือส่งด้วยต้นเองที่ <br />โรงเรียนมัธยมสาธิตมหาวิทยาลัยนเรศวร
-            (โครงการรับสมัครนักเรียน-61) <br />เลขที่ 1 ถนนสนามบิน ตำบลในเมือง อำเภอเมือง จังหวัดพิษณุโลก รหัสไปรษณีย์ 65000
+            (โครงการรับสมัครนักเรียน-62) <br />เลขที่ 1 ถนนสนามบิน ตำบลในเมือง อำเภอเมือง จังหวัดพิษณุโลก รหัสไปรษณีย์ 65000
           </li>
         </ol>
         <b>*หมายเหตุ</b> การรับรองสำเนาหมายถึงการลงลายมือชื่อที่เอกสาร และระบุข้อความรับรองว่าสำเนาถูกต้อง
