--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,10 +4,10 @@
     <div class="starter-template">
       <!-- <img src="./assets/images/NU_Logo.png" id="logo-nu" /> -->
       <h2>
-        <b>ระบบรับสมัครนักเรียนด้วยตนเอง</b>
+        <b>ระบบรับสมัครนักเรียนออนไลน์ ยินดีต้อนรับ</b>
       </h2>
       <h4>
-        <b>6 - 7 มกราคม 2561</b>
+        <b>เปิดระบบ ระหว่างวันที่ 7 พฤศจิกายน 2561 ถึง 23 ธันวาคม 2561</b>
       </h4>
     </div>
     <hr class="head-hr" />
@@ -21,7 +21,7 @@
     <div class="row">
       <div class="col-md-6">
         <mat-card>
-            <a class="link-file" target="_bank" href="http://www.satit.nu.ac.th/2016/files/upload/1511936061.pdf">- ไฟล์ประกาศมหาวิทยาลัยนเรศวร เรื่องรับสมัครสอบคัดเลือกฯ 61</a>
+            <a class="link-file" target="_bank" href="http://www.satit.nu.ac.th/2016/files/upload/1541554722.pdf">- ไฟล์ประกาศมหาวิทยาลัยนเรศวร เรื่องรับสมัครสอบคัดเลือกฯ 62</a>
         </mat-card>
       </div>
       <div class="col-md-6">
@@ -36,13 +36,14 @@
       <mat-card>
         <!-- <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140"> -->
         <h4><b>แผนการเรียนมัธยมศึกษาปีที่ 1</b></h4>
-        <p>โรงเรียนมัธยมสาธิตมหาวิทยาลัยนเรศวรเปิดรับสมัครนักเรียนในระดับชั้นมัธยมศึกษาปีที่ 1 ประจำปีการศึกษา 2561 มี 2 แผนการเรียน ได้แก่</p>
+        <p>โรงเรียนมัธยมสาธิตมหาวิทยาลัยนเรศวรเปิดรับสมัครนักเรียนในระดับชั้นมัธยมศึกษาปีที่ 1 ประจำปีการศึกษา 2562 มี 2 แผนการเรียน ได้แก่</p>
         <ol>
           <li>แผนการเรียนวิทยาศาสตร์-คณิตศาสตร์ (ภาษาไทย)</li>
           <li>แผนการเรียนวิทยาศาสตร์-คณิตศาสตร์ (ภาษาอังกฤษ)</li>
         </ol>
         <p>
-          ผู้สมัครสามารถเลือกแผนการเรียนอย่างใดอย่างหนึ่ง หรือเลือกทั้ง 2 แผนการเรียน โปรดดูรายละเอียดอื่นๆที่ไฟล์ประกาศ
+          ผู้สมัครสามารถเลือกแผนการเรียนอย่างใดอย่างหนึ่ง โปรดดูรายละเอียดอื่นๆที่ไฟล์ประกาศ
+          <br /><br />
         </p>
         <p>
           <button *ngIf="!isOnline.canActivate()" mat-raised-button style="font-family: myFont; font-size: 1.4rem; padding-top: 0.2rem; padding-bottom: 0.2rem;"
@@ -55,7 +56,7 @@
         <!-- <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140"> -->
         <h4><b>แผนการเรียนมัธยมศึกษาปีที่ 4</b></h4>
         <p>
-          โรงเรียนมัธยมสาธิตมหาวิทยาลัยนเรศวรเปิดรับสมัครนักเรียนในระดับชั้นมัธยมศึกษาปีที่ 4 ประจำปีการศึกษา 2561 มี 2 แผนการเรียน
+          โรงเรียนมัธยมสาธิตมหาวิทยาลัยนเรศวรเปิดรับสมัครนักเรียนในระดับชั้นมัธยมศึกษาปีที่ 4 ประจำปีการศึกษา 2562 มี 2 แผนการเรียน
           ได้แก่
         </p>
         <ol>
