--- a/src/app/home/dialog-overview-example-dialog.html
+++ b/src/app/home/dialog-overview-example-dialog.html
@@ -107,11 +107,10 @@
         </div>
         <div mat-dialog-actions>
             <button mat-raised-button></button>
-            <button mat-raised-button style="font-family: myFont; padding-top: 0.2rem; padding-bottom: 0.2rem;" id="btn-submit"
-                [mat-dialog-close]="data" color="primary">ฉันยืนยันว่าข้อมูลเหล่านี้ถูกต้องแล้ว
-                และขอดำเนินการสมัครต่อไป</button>
-            <button mat-raised-button style="font-family: myFont; padding-top: 0.2rem; padding-bottom: 0.2rem;" id="btn-cancel"
-                (click)="onNoClick()" tabindex="-1">ยกเลิก</button>
+            <button mat-raised-button style="font-family: myFont; padding-top: 0.2rem; padding-bottom: 0.2rem; font-size: 1.4rem;" id="btn-submit" [mat-dialog-close]="data"
+                color="primary" >ฉันยืนยันว่าข้อมูลเหล่านี้ถูกต้องแล้ว และขอดำเนินการสมัครต่อไป</button>
+            <button mat-raised-button style="font-family: myFont; padding-top: 0.2rem; padding-bottom: 0.2rem; font-size: 1.4rem;" id="btn-cancel" (click)="onNoClick()"
+                tabindex="-1">ยกเลิก</button>
         </div>
     </div>
 </div>
